change mongodb DB name && Table name

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb://127.0.0.1:27017/Mulcamp
+      uri: mongodb://127.0.0.1:27017/sixthsense
 
   jpa:
     hibernate:
