--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8085
 spring:
   data:
     mongodb:
@@ -7,7 +9,7 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:mysql://localhost:3306/arx?serverTimezone=Asia/Seoul
+    url: jdbc:mysql://localhost:3306/springboot?serverTimezone=Asia/Seoul
     username: root
     password: choi7687
     driver-class-name: com.mysql.cj.jdbc.Driver
